--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -166,15 +166,16 @@ main {
   width: 100%;
   height: 60px;
   background-color: #dadada;
-  text-align: center;
-  line-height: 60px;
   margin-top: 5px;
+  cursor: pointer;
   .more-text-container {
-    width: 150px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     margin: auto;
     display: flex;
-    .text-index {
+    justify-content: center;
+    align-items: center;
+    .more-index {
       align-self: baseline;
       font-size: 0.7rem;
       line-height: 55px;
