--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -61,7 +61,7 @@
           <img src="<%= event.event.imgurl %>">
         </div>
         <div class="banner__right">
-          <div class="banner__slider layer2">
+          <div class="banner__slider layer2 transitiondefault">
             <div class="panel">
               <img src="<%= event.mileageList[0].imgurl %>">
             </div>
