--- a/shopping/public/stylesheets/sass/main/main.sass
+++ b/shopping/public/stylesheets/sass/main/main.sass
@@ -26,8 +26,6 @@
         width: 485px
         height: 340px
         .banner__slider
-            transition-duration: 300ms;
-            transform: translate3d(0px,0px,0px)
             display: flex
             position: relative
             top: 0px
@@ -74,3 +72,10 @@
         .selected
             background-color: #000
 
+.transitiondefault
+    transition-duration: 300ms
+    transform: translate3d(0px,0px,0px)
+
+.transitionLeft
+    transition-duration: 0ms
+    transform: translate3d(0px,0px,0px)
