Modify. 이름변경 hot-theme -> hot-deal

--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -48,6 +48,7 @@ main {
   background-color: #f3f3f3;
   padding: 0 300px;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 //이벤트 배너
@@ -185,7 +186,7 @@ main {
 }
 
 //hot theme
-.hot-theme {
+.hot-deal {
   margin-top: 50px;
   h3 {
     font-size: 1.5rem;
