[Fix] 상단 캐러셀 작업 중 (1)

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -18,7 +18,7 @@ a {
   color: #333;
 }
 
-.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
+.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,7 +48,7 @@ a {
   color: #333;
 }
 
-.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
+.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,13 +95,13 @@ a {
   width: 90%;
 }
 
-.max-WH-auto, .content__event__carousel .carousel, .content__event__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
+.max-WH-auto, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
   max-width: 100%;
   max-height: 100%;
 }
 
 .view-li, .content__hot__carousel ul li, .content__more__view ul li {
-  height: 260px;
+  height: 276px;
   padding: 21px 27px;
   border-bottom: 0 none;
   text-align: left;
@@ -140,7 +140,15 @@ a {
   display: block;
 }
 .icon__carousel, .i-slide__paging--next, .i-slide__paging--prev {
-  background: url("/images/img_home_150131.png") no-repeat;
+  background: url("/images/img_home.png") no-repeat;
+  display: block;
+}
+.icon__comm2, .i-theme {
+  background: url("/images/ico_comm2.gif") no-repeat;
+  display: block;
+}
+.icon__special, .i-slide__special--next, .i-slide__special--prev {
+  background: url("/images/img_special.png") no-repeat;
   display: block;
 }
 
@@ -153,10 +161,22 @@ a {
   height: 28px;
 }
 
+.w-10, .i-slide__special--next, .i-slide__special--prev {
+  width: 10px;
+}
 .w-23, .i-slide__paging--next, .i-slide__paging--prev {
   width: 23px;
 }
+.w-31, .i-theme {
+  width: 31px;
+}
 
+.h-17, .i-slide__special--next, .i-slide__special--prev {
+  height: 17px;
+}
+.h-18, .i-theme {
+  height: 18px;
+}
 .h-45, .i-slide__paging--next, .i-slide__paging--prev {
   height: 45px;
 }
@@ -175,6 +195,18 @@ a {
 }
 .i-slide__paging--next {
   background-position: -30px 0px;
+}
+.i-slide__special--prev {
+  margin: 12px auto;
+  background-position: -110px -100px;
+}
+.i-slide__special--next {
+  margin: 12px auto;
+  background-position: -150px -100px;
+}
+.i-theme {
+  background-position: 0 -850px;
+  margin: 8px 4px 0 0;
 }
 
 body {
@@ -196,7 +228,7 @@ a {
   color: #333;
 }
 
-.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
+.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .header__menu__wrapper ul.list-usergroup li a, .header__menu__wrapper ul, .header__menu__wrapper .category button, .header__logo-search {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -350,7 +382,7 @@ a {
   color: #333;
 }
 
-.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__one a, .header__logo-search, .header__menu__wrapper .category button, .header__menu__wrapper ul, .header__menu__wrapper ul.list-usergroup li a {
+.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .header__logo-search, .header__menu__wrapper .category button, .header__menu__wrapper ul, .header__menu__wrapper ul.list-usergroup li a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -380,7 +412,7 @@ a {
   color: #333;
 }
 
-.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__one a, .header__logo-search, .header__menu__wrapper .category button, .header__menu__wrapper ul, .header__menu__wrapper ul.list-usergroup li a {
+.flex-center, .content__event__carousel .carousel__paging__inner, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .header__logo-search, .header__menu__wrapper .category button, .header__menu__wrapper ul, .header__menu__wrapper ul.list-usergroup li a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -427,13 +459,13 @@ a {
   width: 90%;
 }
 
-.max-WH-auto, .content__event__carousel .carousel, .content__event__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
+.max-WH-auto, .content__event__carousel .carousel, .content__event__carousel__wrap .slide, .content__event__one a, .view-li a img, .content__hot__carousel ul li a img, .content__more__view ul li a img {
   max-width: 100%;
   max-height: 100%;
 }
 
 .view-li, .content__hot__carousel ul li, .content__more__view ul li {
-  height: 260px;
+  height: 276px;
   padding: 21px 27px;
   border-bottom: 0 none;
   text-align: left;
@@ -487,8 +519,38 @@ a {
   margin: 0 auto;
 }
 .content__event__carousel {
-  height: 340px;
   position: relative;
+  height: 340px;
+}
+.content__event__carousel__wrap {
+  height: inherit;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+}
+.content__event__carousel__wrap .slide {
+  width: 485px;
+  margin: 0 auto;
+  /*
+  // position: relative;
+  // top: 0px;
+  // transform: translate3d(0px, 0px, 0px);
+  // left: -514px;
+  // width: 1542px;
+  */
+}
+.content__event__carousel .panel {
+  height: 100%;
+  overflow: hidden;
+  display: inline-block;
+  transform: translate3d(0px, 0px, 0px);
+  width: 100%;
+}
+.content__event__carousel .panel a {
+  display: block;
+  position: relative;
+  width: 484px;
+  margin: 0 auto;
 }
 .content__event__carousel .carousel {
   width: 485px;
@@ -558,6 +620,7 @@ a {
   background-color: #fff;
   margin: 0 auto;
   border: 1px solid #f1f1f1;
+  position: relative;
 }
 .content__hot__carousel ul {
   display: flex;
@@ -568,6 +631,22 @@ a {
 }
 .content__hot__carousel ul li:last-child {
   border-right: none;
+}
+.content__hot .carousel__special, .content__hot .carousel__special--next, .content__hot .carousel__special--prev {
+  top: 50%;
+  margin-top: -20px;
+  position: absolute;
+  width: 41px;
+  height: 41px;
+  background-position: 0 -40px;
+  background-color: black;
+  opacity: 0.5;
+}
+.content__hot .carousel__special--prev {
+  left: 1px;
+}
+.content__hot .carousel__special--next {
+  right: 1px;
 }
 
 /*# sourceMappingURL=index.css.map */
