--- a/sass/index/common.scss
+++ b/sass/index/common.scss
@@ -16,7 +16,7 @@
 // li 태그용 Style (@extend 함)
 // (content__more__view & content__hot__carousel의 ul 안에서 사용)
 .view-li {
-    height: 260px; // 276이였음
+    height: 276px;
     padding: 21px 27px;
     border-bottom: 0 none;
     text-align: left;
