--- a/sass/index/icon.scss
+++ b/sass/index/icon.scss
@@ -4,7 +4,17 @@
     display: block;
 
     &__carousel {
-        background: url('/images/img_home_150131.png') no-repeat;
+        background: url('/images/img_home.png') no-repeat;
+        display: block;
+    }
+
+    &__comm2 {
+        background: url('/images/ico_comm2.gif') no-repeat;
+        display: block;
+    }
+
+    &__special {
+        background: url('/images/img_special.png') no-repeat;
         display: block;
     }
 }
@@ -22,12 +32,28 @@
 }
 
 .w {
+    &-10 {
+        width: 10px;
+    }
+
     &-23 {
         width: 23px;
+    }
+
+    &-31 {        
+        width: 31px;        
     }
 }
 
 .h {
+    &-17 {
+        height: 17px;
+    }
+
+    &-18 {
+        height: 18px;
+    }
+
     &-45 {
         height: 45px;
     }
@@ -54,6 +80,7 @@
     }
 
     &-slide {
+
         &__paging {
             &--prev {
                 @extend .icon__carousel, .w-23, .h-45;
@@ -64,5 +91,24 @@
                 background-position: -30px 0px;
             }
         }
+                
+        &__special {
+            &--prev {
+                @extend .icon__special, .w-10, .h-17;
+                margin: 12px auto;
+                background-position: -110px -100px;
+            }
+            &--next {
+                @extend .icon__special, .w-10, .h-17;
+                margin: 12px auto;
+                background-position: -150px -100px;
+            }
+        }
+    }
+
+    &-theme {
+        @extend .icon__comm2, .w-31, .h-18;
+        background-position: 0 -850px;
+        margin: 8px 4px 0 0;
     }
 }
