Implement the main event carousel prototype
* modified(or added) 'app.js', '.html' and '.scss' for client-side-rendering

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,10 @@ header {
   // position: fixed;
   display: inline-block;
   text-align: center;
+
+  * {
+    font-size: 16px;
+  }
 }
 
 .head-top {
@@ -74,11 +78,13 @@ header {
 
 .wrap-body-sect {
   @extend %debug-border-1;
+  display: inline-block;
   width: 100%;
+  // height: 0;
   min-width: $main-evt-img-w * 2;
   padding: 20px 0;
+  margin: 0;
   position: relative;
-  display: inline-block;
   text-align: center;
   background-color: $lightgray;
 
@@ -86,9 +92,9 @@ header {
     .body-sect-#{$i} {
       @extend %debug-border-2;
       // width: 100%;
+      display: inline-block;
       padding: 0;
       margin: 0 auto;
-      display: inline-block;
       background-color: $white;
     }
   }
@@ -103,70 +109,6 @@ header {
         width: $main-evt-img-w;
         height: $main-evt-img-h;
         padding: 0;
-      }
-
-      .wrap-main-evt-slide {
-        position: relative;
-
-        .main-evt-slide {
-          
-        }
-
-        .main-evt-slide-ctrl {
-          width: 100%;
-          position: absolute;
-          top: 85%;
-          left: 0;
-          display: inline-block;
-          text-align: center;
-
-          .page-ctrl{
-            @extend %debug-border-1;
-            width: 15px;
-            height: 5px;
-            display: inline-block;
-            background-color: $gray;
-          }
-
-
-          %slide-ctrl__btn {
-            width: 35px;
-            height: 45px;
-            position: absolute;
-            top: -50%;
-          }
-
-          %slide-ctrl__btn__icon {
-            @extend %debug-border-0;
-            display: inline-block;
-            background-image: url("../../rsc/ic/img_home_150131.png");
-            overflow: hidden;
-            width: 15px;
-            height: 25px;
-          }
-
-          .slide-ctrl__to-left-btn {
-            @extend %debug-border-1;
-            @extend %slide-ctrl__btn;
-            left: 32%;
-
-            .slide-ctrl__to-left-btn__icon {
-              @extend %slide-ctrl__btn__icon;
-              background-position: -128px -335px;
-            }
-          }
-
-          .slide-ctrl__to-right-btn {
-            @extend %debug-border-1;
-            @extend %slide-ctrl__btn;
-            right: 32%;
-            
-            .slide-ctrl__to-right-btn__icon {
-              @extend %slide-ctrl__btn__icon;
-              background-position: -145px -335px;
-            }
-          }
-        }
       }
     }
 
@@ -198,7 +140,79 @@ header {
             }
           }
         }
-        
+      }
+    }
+  }
+}
+
+.main-evt-slide {
+  position: relative;
+  // overflow: hidden;
+  
+  .slide__pages {
+    width: $main-evt-img-w * $main-evt-page-cnt;
+    height: $main-evt-img-h;
+    position: relative;
+
+    > div {
+      float: left;
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+  .slide__page-ctrl {
+    width: 100%;
+    position: absolute;
+    top: 85%;
+    left: 0;
+    display: inline-block;
+    text-align: center;
+
+    .slide__page-ctrl__idx-btn {
+      @extend %debug-border-1;
+      display: inline-block;
+      width: 15px;
+      height: 5px;
+      margin: 0 2px;
+      background-color: $gray;
+    }
+
+    %page-ctrl__arrow-btn {
+      width: 35px;
+      height: 45px;
+      position: absolute;
+      top: -18px;
+    }
+
+    %page-ctrl__arrow-btn__icon {
+      @extend %debug-border-0;
+      display: inline-block;
+      background-image: $ic-url;
+      overflow: hidden;
+      width: 15px;
+      height: 25px;
+    }
+
+    .slide__page-ctrl__left-btn {
+      @extend %debug-border-1;
+      @extend %page-ctrl__arrow-btn;
+      left: 32%;
+
+      .page-ctrl__left-btn__icon {
+        @extend %page-ctrl__arrow-btn__icon;
+        background-position: -128px -335px;
+      }
+    }
+
+    .slide__page-ctrl__right-btn {
+      @extend %debug-border-1;
+      @extend %page-ctrl__arrow-btn;
+      right: 32%;
+      
+      .page-ctrl__right-btn__icon {
+        @extend %page-ctrl__arrow-btn__icon;
+        background-position: -145px -335px;
       }
     }
   }
