--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -76,9 +76,9 @@
             </div>
             <div class="slide_paging">
               <ul class="slide_paging_square">
-                <li class="page">1</li>
-                <li class="page">2</li>
-                <li class="page">3</li>
+                <li class="page1">1</li>
+                <li class="page2">2</li>
+                <li class="page3">3</li>
               </ul>
               <button class="prev_button">〈</button>
               <button class="next_button">〉</button>
