--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -76,7 +76,7 @@
             </div>
             <div class="slide_paging">
               <ul class="slide_paging_square">
-                <li class="page1">1</li>
+                <li class="page1 black">1</li>
                 <li class="page2">2</li>
                 <li class="page3">3</li>
               </ul>
