--- a/scss/common.scss
+++ b/scss/common.scss
@@ -116,6 +116,7 @@ ul {
 .box {
   grid-template-columns: repeat(5, 1fr);
   background-color: #fff;
+  overflow: hidden;
   &__item {
     padding: 1em;
     text-decoration: none;
@@ -134,6 +135,8 @@ ul {
       @extend .f-12;
       display: block;
       margin-bottom: 0.5em;
+      height: 3em;
+      overflow: hidden;
     }
     &__tag {
       @extend .f-12;
@@ -152,6 +155,62 @@ ul {
       }
       .box__item__img {
         opacity: 0.7;
+      }
+    }
+  }
+}
+
+.box-carousel {
+  &__items {
+    display: flex;
+    &.transition-on {
+      transition: all 0.3s linear;
+    }
+  }
+  .box-paging {
+    &__arrow {
+      position: absolute;
+      top: calc(30%);
+      width: 100%;
+      &__left {
+        position: absolute;
+        left: 0;
+        padding: 15px;
+        background: rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        opacity: 0.8;
+      }
+      &__right {
+        position: absolute;
+        right: 0;
+        padding: 15px;
+        background:rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+        opacity: 0.8;
+        transform: rotate(180deg);
+      }
+      &__left, &__right {
+        &::before {
+          content: "";
+          border-left: 2px solid #eee;
+          position: absolute;
+          height: 15px;
+          top: 2px;
+          left: 13px;
+          transform: rotate(45deg);
+        }
+        &::after {
+          content: "";
+          border-left: 2px solid #eee;
+          position: absolute;
+          height: 15px;
+          top: 12px;
+          left: 13px;
+          transform: rotate(-45deg);
+        }
+        &:hover {
+          opacity: 1;
+        }
       }
     }
   }
