--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -876,6 +876,33 @@ section {
               }
             }
           }
+          .more-item__container {
+            position: relative;
+            width: 100%;
+            // box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+            height: 45px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #ebebeb;
+            .more-item__button {
+              width: 100%;
+              height: 100%;
+              cursor: pointer;
+              span {
+                display: inline-block;
+                font-weight: 500;
+              }
+            }
+
+            &:hover {
+              background: #e5e5e5;
+              transition: 0.4s;
+              span {
+                font-weight: 600;
+              }
+            }
+          }
         }
       }
       .hot-keyword__wrapper {
